<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/share"
        android:title="@string/share_this_app" />
    <item
        android:id="@+id/rate"
        android:title="@string/rate_this_app" />


    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us" />


    <item
        android:id="@+id/term_and_condition"
        android:title="@string/term_and_condition" />

    <item
        android:id="@+id/about_us"
        android:title="@string/about_us" />

    <item
        android:id="@+id/refund_policy"
        android:title="@string/refund_policy" />
    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>