<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_profile"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            app:titleTextColor="@color/colorBlack"
            android:layout_height="wrap_content"
            />

        <FrameLayout
            android:id="@+id/dp_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_marginStart="5dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="90dp"
                android:layout_height="90dp"
                 />

            <ImageView
                android:layout_width="18sp"
                android:layout_height="18dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_baseline_add_circle_24" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/progress_bar"
                android:visibility="gone"
                />
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/fill_up_your_details"
            android:textColor="@color/colorBlack" />


    </LinearLayout>

    <ScrollView
        android:layout_below="@id/header"
        android:layout_above="@id/lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="400dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/border_square"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/full_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:backgroundTint="@android:color/transparent"
                    android:autofillHints="@string/full_name"
                    android:hint="@string/full_name" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/border_square"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:autofillHints="@string/email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/border_square"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/phone_number"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:autofillHints="@string/phone_number"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:enabled="false"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/border_square"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/gender"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorBlack" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/gender"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/border_square"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:autofillHints="@string/city"
                    android:hint="@string/city"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:id="@+id/lyt"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/save_and_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_continue"
android:background="@android:color/transparent"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/poppins_bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom= "@dimen/_35sdp" />

    </LinearLayout>


</RelativeLayout>