<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:id="@+id/header"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/logo"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_centerVertical="true"
        android:id="@+id/user_dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:fontFamily="@font/avenir_next_demi"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20ssp"
        />


    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/_10sdp"
        android:foreground="?attr/selectableItemBackground"
        tools:ignore="UnusedAttribute" />



</RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@id/header"
    android:gravity="center_horizontal">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">

    <androidx.cardview.widget.CardView
        android:layout_weight="1"
        android:id="@+id/cv_demo_exam"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardBackgroundColor="@color/colorBlack">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/demo_exam"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/question_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:text="20 Questions"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_weight="1"
        android:id="@+id/cv_subscription"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardBackgroundColor="@color/colorBlack">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ProgressBar
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerHorizontal="true"
                android:id="@+id/progressbar_sub"
                android:layout_marginTop="@dimen/_40sdp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/subscription_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/subscription_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subscription_title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="visible"/>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MCQs"
        android:fontFamily="@font/avenir_next_demi"
        android:textSize="@dimen/_16ssp"
        android:layout_gravity="start"
        android:layout_margin="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/sub_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscription_inactive"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/_12ssp"
        android:layout_gravity="start"
        android:textColor="@color/colorRed"
        android:layout_margin="@dimen/_10sdp"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>


<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recyclerview"/>




</LinearLayout>

</RelativeLayout>